--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                 <hr>
                 <div class="skills-content">
                     <div class="row">
-                        <div class="item"><img src="/imag/html.png" alt="HTML">
+                        <div class="item"><img src="./imag/html.png" alt="HTML">
                             <p>HTML</p>
                         </div>
-                        <div class="item"><img src="/imag/images.png" alt="CSS">
+                        <div class="item"><img src="./imag/images.png" alt="CSS">
                             <p>CSS</p>
                         </div>
-                        <div class="item"><img src="/imag/python.png" alt="Python">
+                        <div class="item"><img src="./imag/python.png" alt="Python">
                             <p>Python</p>
                         </div>
                         <div class="item"><img src="/imag/c++.png" alt="C++">
