--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
                         <div class="item"><img src="./imag/python.png" alt="Python">
                             <p>Python</p>
                         </div>
-                        <div class="item"><img src="/imag/c++.png" alt="C++">
+                        <div class="item"><img src="./imag/c++.png" alt="C++">
                             <p>C++</p>
                         </div>
-                        <div class="item"><img src="/imag/c sharp.png" alt="C#">
+                        <div class="item"><img src="./imag/c sharp.png" alt="C#">
                             <p>C#</p>
                         </div>
-                        <div class="item"><img src="/imag/github.png" alt="GitHub">
+                        <div class="item"><img src="./imag/github.png" alt="GitHub">
                             <p>GitHub</p>
                         </div>
-                        <div class="item"><img src="/imag/wordpress.png" alt="WordPress">
+                        <div class="item"><img src="./imag/wordpress.png" alt="WordPress">
                             <p>WordPress</p>
                         </div>
-                        <div class="item"><img src="/imag/javascript.png" alt="JavaScript">
+                        <div class="item"><img src="./imag/javascript.png" alt="JavaScript">
                             <p>JavaScript</p>
                         </div>
                     </div>
@@ -129,37 +129,37 @@
         <section id="services">
             <div class="container">
                 <div class="heading">
-                    <img src="/imag/computer2.avif" alt="Computer">
+                    <img src="./imag/computer2.avif" alt="Computer">
                     <h2>My <span class="text-primary">Services</span></h2>
                 </div>
                 <div class="row">
                     <div class="item">
-                        <img src="/imag/simple-computer-laptop-isolated-png.webp" alt="Web Development">
+                        <img src="./imag/simple-computer-laptop-isolated-png.webp" alt="Web Development">
                         <h3>Web Development</h3>
                         <p>I can build a website using HTML, CSS, and JavaScript</p>
                     </div>
                     <div class="item">
-                        <img src="/imag/responsive.png" alt="Responsive Design">
+                        <img src="./imag/responsive.png" alt="Responsive Design">
                         <h3>Responsive Design</h3>
                         <p>Your website will be 100% responsive for all devices: tablets and smartphones</p>
                     </div>
                     <div class="item">
-                        <img src="/imag/creative.jpg" alt="Creative Design">
+                        <img src="./imag/creative.jpg" alt="Creative Design">
                         <h3>Creative Design</h3>
                         <p>I can edit your current website by adding new content to make it much better</p>
                     </div>
                     <div class="item">
-                        <img src="/imag/ideas.png" alt="Ideas">
+                        <img src="./imag/ideas.png" alt="Ideas">
                         <h3>Web Ideas</h3>
                         <p>I can turn your ideas into real projects with high quality</p>
                     </div>
                     <div class="item">
-                        <img src="/imag/retouch.png" alt="Retouch">
+                        <img src="./imag/retouch.png" alt="Retouch">
                         <h3>Retouch</h3>
                         <p>I can redesign your current website to look much better</p>
                     </div>
                     <div class="item">
-                        <img src="/imag/support.png.webp" alt="Support">
+                        <img src="./imag/support.png.webp" alt="Support">
                         <h3>Support</h3>
                         <p>Support is available if you want to make changes after delivering your website</p>
                     </div>
@@ -175,42 +175,42 @@
                 <hr>
                 <div class="row">
                     <div class="item">
-                        <img src="/imag/w3school.png" alt="W3Schools">
+                        <img src="./imag/w3school.png" alt="W3Schools">
                         <div class="item-content">
                             <h3>Learning Programming Languages</h3>
                             <a href="https://www.w3schools.com/">Visit Website</a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/imag/youtube.png" alt="YouTube">
+                        <img src="./imag/youtube.png" alt="YouTube">
                         <div class="item-content">
                             <h3>Watch Programming Tutorials</h3>
                             <a href="https://www.youtube.com/">Visit Website</a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/imag/amazon.png" alt="Amazon">
+                        <img src="./imag/amazon.png" alt="Amazon">
                         <div class="item-content">
                             <h3>Sales Presentation Site</h3>
                             <a href="https://www.amazon.com/">Visit Website</a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/imag/fb.png" alt="Facebook">
+                        <img src="./imag/fb.png" alt="Facebook">
                         <div class="item-content">
                             <h3>Facebook</h3>
                             <a href="https://facebook.com">Visit Website</a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/imag/insta.png" alt="Instagram">
+                        <img src="./imag/insta.png" alt="Instagram">
                         <div class="item-content">
                             <h3>Instagram</h3>
                             <a href="https://www.instagram.com/">Visit Website</a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/imag/gh.png" alt="GitHub">
+                        <img src="./imag/gh.png" alt="GitHub">
                         <div class="item-content">
                             <h3>GitHub</h3>
                             <a href="https://github.com/">Visit Website</a>
@@ -226,7 +226,7 @@
             <div class="container">
                 <h2><i class="fa-solid fa-headset"></i> Get in <span class="text-primary">Touch</span></h2>
                 <div class="row">
-                    <img src="/imag/tab2-Photoroom.png" alt="Contact">
+                    <img src="./imag/tab2-Photoroom.png" alt="Contact">
                     <form action="https://formsubmit.co/latrechekhalil95@gmail.com" method="POST">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="text" name="Name" id="Name" placeholder="Name" required>
