--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                         </p>
                     </div>
                     <div class="col-2">
-                        <p><b>Age:</b> 24</p>
+                         <p><b>Age:</b> 19</p>
                         <p><b>Email:</b> latrechekhalil95@gmail.com</p>
-                        <p><b>Place:</b> Algeria</p>
+                        <p><b>Place:</b> Skikda-Algeria</p>
                     </div>
                 </div>
             </div>
