--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Latreche Khalil</title>
+    <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -16,24 +19,44 @@
 
 <body>
 
+    <!-- Bootstrap 5 Responsive Navbar -->
+<nav class="navbar navbar-expand-lg ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Latreche Khalil</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="تبديل التنقل">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto"> <!-- 'ms-auto' لدفع القائمة لليمين -->
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+
     <!-- Header Start -->
     <header id="home">
-        <div class="navbar">
-            <nav>
-                <a href="#home" id="logo">Latreche Khalil</a>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+    
 
         <div class="header-content">
             <div class="content-content">
-                <p><span class="text-primary">Hi there, I'm</span></p>
+                <p><span class="text--primary">Hi there, I'm</span></p>
                 <h1>Latreche Khalil</h1>
                 <p class="title">Full Stack Developer</p>
                 <div class="social">
@@ -65,8 +88,8 @@
                 <h2>About Me</h2>
                 <hr>
                 <div class="about-content">
-                    <div class="col-1">
-                        <h3>I'm <span class="text-primary">Latreche Khalil</span>, a Web Developer</h3>
+                    <div class="col--1">
+                        <h3>I'm <span class="text--primary">Latreche Khalil</span>, a Web Developer</h3>
                         <p>
                             I am a Full Stack Developer with experience in both front-end and back-end development. I
                             build dynamic and responsive web applications using modern technologies. On the front-end, I
@@ -79,7 +102,7 @@
                             development to deliver high-quality software solutions.
                         </p>
                     </div>
-                    <div class="col-2">
+                    <div class="col--2">
                          <p><b>Age:</b> 19</p>
                         <p><b>Email:</b> latrechekhalil95@gmail.com</p>
                         <p><b>Place:</b> Skikda-Algeria</p>
@@ -92,10 +115,10 @@
         <!-- Skills Start -->
         <section id="skills">
             <div class="container">
-                <h2><i class="fa-solid fa-laptop-code"></i> Skills & <span class="text-primary">Abilities</span></h2>
+                <h2><i class="fa-solid fa-laptop-code"></i> Skills & <span class="text--primary">Abilities</span></h2>
                 <hr>
                 <div class="skills-content">
-                    <div class="row">
+                    <div class="row1">
                         <div class="item"><img src="./imag/html.png" alt="HTML">
                             <p>HTML</p>
                         </div>
@@ -131,7 +154,7 @@
             <div class="container">
                 <div class="heading">
                     <img src="./imag/computer2.avif" alt="Computer">
-                    <h2>My <span class="text-primary">Services</span></h2>
+                    <h2>My <span class="text--primary">Services</span></h2>
                 </div>
                 <div class="row">
                     <div class="item">
@@ -172,7 +195,7 @@
         <!-- Portfolio Start -->
         <section id="portfolio">
             <div class="portfolio">
-                <h2><i class="fa-solid fa-laptop-code"></i> My <span class="text-primary">Portfolio</span></h2>
+                <h2><i class="fa-solid fa-laptop-code"></i> My <span class="text--primary">Portfolio</span></h2>
                 <hr>
                 <div class="row">
                     <div class="item">
@@ -225,7 +248,7 @@
         <!-- Contact Start -->
         <section id="contact">
             <div class="container">
-                <h2><i class="fa-solid fa-headset"></i> Get in <span class="text-primary">Touch</span></h2>
+                <h2><i class="fa-solid fa-headset"></i> Get in <span class="text--primary">Touch</span></h2>
                 <div class="row">
                     <img src="./imag/tab2-Photoroom.png" alt="Contact">
                     <form action="https://formsubmit.co/latrechekhalil95@gmail.com" method="POST">
@@ -257,6 +280,10 @@
 
     </footer>
     <!--footer end-->
+
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
 
